--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div>
     &copy; {{ site.time | date: '%Y' }} {{ site.user.name }}.
-    Powered by <a href="http://jekyllrb.com" target="_blank">Jekyll</a>.
+    Powered by <a href="http://hackgov.github.io" target="_blank">nanfang</a>.
     Get this theme
-    <a href="https://github.com/starry99/catbook" target="_blank">here</a>.
+    <a href="https://hackgov.github.io" target="_blank">here</a>.
   </div>
 </footer>
